--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script
+      src="https://kit.fontawesome.com/3b077a603c.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Home | Bharat singh</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
@@ -33,8 +37,9 @@
         alt=""
       />
       <h1 class="hero-heading">
-        Hello Am Bharat singh
-        <strong>Welcome to</strong>
+        Hello am Bharat singh
+        <br />
+        <b style="color: black;">Welcome to</b>
         <span class="heading-inverted">My Portfolio</span>
       </h1>
     </header>
@@ -42,9 +47,23 @@
     <section class="section ow">
       <div class="container container-center">
         <h1>Technologies</h1>
-        <p>
-          I'm familiar with HTML5, CSS3, Git, JavaScript, NodeJS, ReactJS, and
-          Web Hosting
+        <p class="icons">
+          <i
+            class="fa-brands fa-html5"
+            style="font-size: 60px; color: orange;"
+          ></i>
+          <i
+            class="fa-brands fa-css3-alt"
+            style="font-size: 60px; color: rgb(29, 155, 228);"
+          ></i>
+          <i
+            class="fa-brands fa-square-js"
+            style="font-size: 60px; color: rgb(226, 226, 34);"
+          ></i>
+          <i
+            class="fa-brands fa-react"
+            style="font-size: 60px; color: rgb(103, 205, 236);"
+          ></i>
         </p>
       </div>
     </section>
