--- a/projects.html
+++ b/projects.html
@@ -10,7 +10,7 @@
 
   <body>
     <nav class="navigation container">
-      <div class="nav-brand">I am Developer</div>
+      <div class="nav-brand">Bharat Singh</div>
       <ul class="list-non-bullet nav-pills">
         <li class="list-item-inline">
           <a class="link" href="/">Home</a>
@@ -31,7 +31,8 @@
         alt=""
       />
       <h1 class="hero-heading">
-        My <span class="heading-inverted">projects </span>
+        My
+        <span class="heading-inverted">projects</span>
       </h1>
     </header>
 
@@ -41,19 +42,23 @@
           <h1>DO you know me ?</h1>
           <small></small>
           <p class="project-info">
-            A CLI app built with <strong>nodeJS</strong>. You can send this to
-            your friends and find out who really knows you
+            A CLI app built with
+            <strong>nodeJS</strong>
+            . You can send this to your friends and find out who really knows
+            you
           </p>
           <a
             class="link primary-link link-margin"
             href="https://replit.com/@bharatsingh3/DO-you-know-me-Quiz?embed=true#index.js"
-            >Play Game</a
           >
+            Play Game
+          </a>
           <a
             class="link secondary-link"
             href="https://github.com/bharats9768/DO-you-know-me-Quiz"
-            >View source</a
           >
+            View source
+          </a>
         </div>
       </li>
 
@@ -62,19 +67,22 @@
           <h1>Are you a marvel fan?</h1>
           <small></small>
           <p class="project-info">
-            A CLI app built with <strong>nodeJS</strong>. You can send this to
-            your friends and find out who are marvel fans
+            A CLI app built with
+            <strong>nodeJS</strong>
+            . You can send this to your friends and find out who are marvel fans
           </p>
           <a
             class="link primary-link link-margin"
             href="https://replit.com/@bharatsingh3/Fandom-Quiz-app?embed=true#index.js"
-            >Play Game</a
           >
+            Play Game
+          </a>
           <a
             class="link secondary-link"
             href="https://github.com/bharats9768/Fandom-Quiz-app-"
-            >View source</a
           >
+            View source
+          </a>
         </div>
       </li>
 
@@ -90,13 +98,15 @@
           <a
             class="link primary-link link-margin"
             href="https://minions-banana-speaking.netlify.app/"
-            >Live Project</a
           >
+            Live Project
+          </a>
           <a
             class="link secondary-link"
             href="https://github.com/bharats9768/Banana-speak"
-            >View source</a
           >
+            View source
+          </a>
         </div>
       </li>
 
@@ -112,13 +122,15 @@
           <a
             class="link primary-link link-margin"
             href="https://donald-duck-speaking.netlify.app/"
-            >Live Project</a
           >
+            Live Project
+          </a>
           <a
             class="link secondary-link"
             href="https://github.com/bharats9768/Donald-duck-speaking"
-            >View source</a
           >
+            View source
+          </a>
         </div>
       </li>
 
@@ -127,14 +139,18 @@
           <h1>Emoji interpreter</h1>
           <small></small>
           <p class="project-info">Library of emojis with meaning.</p>
-          <a class="link primary-link link-margin" href="https://4tod3.csb.app/"
-            >Live Project</a
+          <a
+            class="link primary-link link-margin"
+            href="https://4tod3.csb.app/"
           >
+            Live Project
+          </a>
           <a
             class="link secondary-link"
             href="https://github.com/bharats9768/emoji-interpreter"
-            >View source</a
           >
+            View source
+          </a>
         </div>
       </li>
 
@@ -143,14 +159,18 @@
           <h1>Good movies</h1>
           <small></small>
           <p class="project-info">Libary of one of my favourite movies.</p>
-          <a class="link primary-link link-margin" href="https://f51iw.csb.app/"
-            >Live Project</a
+          <a
+            class="link primary-link link-margin"
+            href="https://f51iw.csb.app/"
           >
+            Live Project
+          </a>
           <a
             class="link secondary-link"
             href="https://github.com/bharats9768/React-app-good-movies"
-            >View source</a
           >
+            View source
+          </a>
         </div>
       </li>
 
@@ -166,13 +186,15 @@
           <a
             class="link primary-link link-margin"
             href="https://simple-cash-register-manager.netlify.app/"
-            >Live Project</a
           >
+            Live Project
+          </a>
           <a
             class="link secondary-link"
             href="https://github.com/bharats9768/cash-register-manager"
-            >View source</a
           >
+            View source
+          </a>
         </div>
       </li>
 
@@ -187,13 +209,15 @@
           <a
             class="link primary-link link-margin"
             href="https://is-yourbday-luckyornot.netlify.app/"
-            >Live Project</a
           >
+            Live Project
+          </a>
           <a
             class="link secondary-link"
             href="https://github.com/bharats9768/Is-Your-Birthday-lucky"
-            >View source</a
           >
+            View source
+          </a>
         </div>
       </li>
 
@@ -207,13 +231,15 @@
           <a
             class="link primary-link link-margin"
             href="https://funwith-areaof-triangles.netlify.app/"
-            >Live Project</a
           >
+            Live Project
+          </a>
           <a
             class="link secondary-link"
             href="https://github.com/bharats9768/Fun-with-Triangles"
-            >View source</a
           >
+            View source
+          </a>
         </div>
       </li>
 
@@ -229,15 +255,15 @@
             class="link primary-link link-margin"
             href="https://isyour-birthday-palindrome.netlify.app/"
           >
-            Live Project</a
-          >
+            Live Project
+          </a>
 
           <a
             class="link secondary-link"
             href="https://github.com/bharats9768/Is-your-birthday-a-palindrome"
           >
-            View source</a
-          >
+            View source
+          </a>
         </div>
       </li>
 
@@ -252,14 +278,16 @@
           <a
             class="link primary-link link-margin"
             href="https://stock-profitandloss-purchase.netlify.app/"
-            >Live Project</a
           >
+            Live Project
+          </a>
 
           <a
             class="link secondary-link"
             href="https://github.com/bharats9768/Stock-purchase-profit-and-loss"
-            >View source</a
           >
+            View source
+          </a>
         </div>
       </li>
     </ul>
@@ -279,8 +307,9 @@
           <a
             class="link"
             href="https://www.linkedin.com/in/bharat-singh-ba0245222/"
-            >Linkedin</a
           >
+            Linkedin
+          </a>
         </li>
       </ul>
     </footer>
