--- a/blog1.html
+++ b/blog1.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav class="navigation container">
-        <div class="nav-brand">Bharat singh</div>
+        <div class="nav-brand">Bharat Singh</div>
         <ul class="list-non-bullet nav-pills">
 
             <li class="list-item-inline">
