--- a/blogs.html
+++ b/blogs.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <nav class="navigation container">
-      <div class="nav-brand">I am Developer</div>
+      <div class="nav-brand">Bharat Singh</div>
       <ul class="list-non-bullet nav-pills">
         <li class="list-item-inline">
           <a class="link" href="/">Home</a>
@@ -31,7 +31,8 @@
         alt=""
       />
       <h1 class="hero-heading">
-        My <span class="heading-inverted">blogs </span>
+        My
+        <span class="heading-inverted">blogs</span>
       </h1>
     </header>
 
@@ -42,10 +43,10 @@
           I really like Frontend, and Frontend-Mentor is one of the best website
           to imporove your Frontend skills. Frontend Mentor is a platform where
           developers can learn and improve their frontend developing skills
-          alongside with other developers by doing the challenges
-          given...<strong> to Continue reading click on Read more </strong>
+          alongside with other developers by doing the challenges given...
+          <strong>to Continue reading click on Read more</strong>
         </p>
-        <a class="link primary-link" href="/blog1.html"> Read more here </a>
+        <a class="link primary-link" href="/blog1.html">Read more here</a>
       </div>
     </section>
 
@@ -56,8 +57,8 @@
           I like sometimes reading blogs because i like reading books too,
           because i can relate myself with them. There are many quite many
           bloggers but some of them are really good, Blogs sites are mostly
-          boring to read with less visual and more to just read and
-          read...<strong> to Continue reading click on Read more </strong>
+          boring to read with less visual and more to just read and read...
+          <strong>to Continue reading click on Read more</strong>
         </p>
         <a class="link primary-link blog1" href="/blog1.html">Read more here</a>
       </div>
@@ -78,8 +79,9 @@
           <a
             class="link"
             href="https://www.linkedin.com/in/bharat-singh-ba0245222/"
-            >Linkedin</a
           >
+            Linkedin
+          </a>
         </li>
       </ul>
     </footer>
